--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,11 @@
     text-align: left;
 }
 
+#questionNumber{
+    padding-right:10px;
+    font-size:20px;
+}
+
 .choices{
     margin-left: 50px;
     text-align: left;
